# vahadane-trichrome

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  run_stain_normalization.slurm
docs/: histogram-matching-explainer.md  histogram-matching-slide-outline.md  histogram-matching-slides.md  histogram-matching.md  multi-ref.md
examples/: cohort_evaluation_example.py  example.py  histogram_matching_examples.py  histogram_matching_multi_source_target_example.py  histogram_matching_single_target_from_multi_example.py  histogram_matching_two_source_intuition_example.py  vahadane_example.py
scripts/: build_histogram_matching_story_pack.py
slurm/: run_bu_to_nw_concat_target_vahadane_zarr_2component.slurm  run_example_nmf_single_ref.slurm  run_exampledata_singletarget_nw_concat_2component.slurm  run_histogram_matching_multi_source_target_example.slurm  run_histogram_matching_single_target_from_multi_example.slurm  run_kadmon_to_nw_concat_target_vahadane_zarr_2component.slurm  run_level2_multitarget_nw_to_bu.slurm  run_level2_singletarget_nw_to_bu_2component.slurm  run_level2_singletarget_nw_to_bu_variant.slurm
src/vahadane_trichrome/: __init__.py  __main__.py  cli.py  core.py  evaluation.py  histogram_matching.py  utils.py
src/vahadane_trichrome/methods/: __init__.py  histogram_matching.py  vahadane.py
tests/: test_evaluation.py  test_histogram_matching.py  test_multi_target.py  test_nmf_backend.py  test_utils.py  test_vahadane_trichrome_image_sanity.py  test_vahdane_trichrome.py
